force-app/main/default/objects/TW1_Payment__c/TW1_Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>