force-app/main/default/objects/TW1_Payment__c/fields/TW1_I_m_Supplier__c.field-meta.xml
<CustomField>
    <fullName>TW1_I_m_Supplier__c</fullName>
    <formula>IF(  TW1_Supplier__r.TW1_Step_Owner__c  = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I&apos;m Supplier</label>
    <type>Checkbox</type>
</CustomField>