force-app/main/default/objects/TW1_Payment__c/fields/TW1_ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>TW1_ID_Externo__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>