force-app/main/default/objects/TW1_Payment__c/fields/TW1_Paid__c.field-meta.xml
<CustomField>
    <fullName>TW1_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>