force-app/main/default/objects/TW1_Payment__c/fields/TW1_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>