force-app/main/default/objects/TW1_Payment__c/fields/TW1_Supplier__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>