force-app/main/default/objects/TW1_Payment__c/fields/TW1_Text__c.field-meta.xml
<CustomField>
    <fullName>TW1_Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>