force-app/main/default/objects/TW1_Payment__c/fields/TW1_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_ID__c</fullName>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>