force-app/main/default/objects/TW1_Payment__c/listViews/My_Payments.listView-meta.xml
<ListView>
    <fullName>My_Payments</fullName>
    <columns>NAME</columns>
    <columns>TW1_Schedule_Date__c</columns>
    <columns>TW1_Payment_Date__c</columns>
    <columns>TW1_Paid__c</columns>
    <columns>TW1_Total_Value__c</columns>
    <columns>TW1_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TW1_I_m_Supplier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meus Pagamentos</label>
</ListView>