force-app/main/default/objects/TW1_Payment__c/listViews/Todos_Pagamentos.listView-meta.xml
<ListView>
    <fullName>Todos_Pagamentos</fullName>
    <columns>NAME</columns>
    <columns>TW1_Schedule_Date__c</columns>
    <columns>TW1_Payment_Date__c</columns>
    <columns>TW1_Paid__c</columns>
    <columns>TW1_Total_Value__c</columns>
    <columns>TW1_Text__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos Pagamentos</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>